--- a/package.json
+++ b/package.json
@@ -12,9 +12,19 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.8.4",
+    "css-loader": "^7.1.2",
+    "less": "^4.3.0",
+    "less-loader": "^12.2.0",
+    "material-design-icons": "^3.0.1",
+    "material-symbols": "^0.31.2",
     "pinia": "^3.0.1",
+    "uikit": "^3.23.6",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-friendly-iframe": "^0.20.0",
+    "vue-observe-visibility": "^1.0.0",
+    "vue-router": "^4.5.0",
+    "vue-template-compiler": "^2.7.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
