--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "less-loader": "^12.2.0",
     "material-design-icons": "^3.0.1",
     "material-symbols": "^0.31.2",
+    "mitt": "^3.0.1",
     "pinia": "^3.0.1",
     "uikit": "^3.23.6",
     "vue": "^3.5.13",
