--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "uikit": "^3.23.6",
     "vue": "^3.5.13",
     "vue-friendly-iframe": "^0.20.0",
-    "vue-observe-visibility": "^1.0.0",
     "vue-router": "^4.5.0",
-    "vue-template-compiler": "^2.7.16"
+    "vue-template-compiler": "^2.7.16",
+    "vue3-observe-visibility": "^1.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
