--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "css-loader": "^7.1.2",
+    "echarts": "^5.6.0",
     "less": "^4.3.0",
     "less-loader": "^12.2.0",
     "material-design-icons": "^3.0.1",
@@ -22,6 +23,7 @@
     "pinia": "^3.0.1",
     "uikit": "^3.23.6",
     "vue": "^3.5.13",
+    "vue-echarts": "^7.0.3",
     "vue-friendly-iframe": "^0.20.0",
     "vue-router": "^4.5.0",
     "vue-template-compiler": "^2.7.16",
