--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "pinia": "^3.0.1",
     "uikit": "^3.23.6",
     "vue": "^3.5.13",
-    "vue-echarts": "^7.0.3",
     "vue-friendly-iframe": "^0.20.0",
     "vue-router": "^4.5.0",
     "vue-template-compiler": "^2.7.16",
+    "vue3-echarts": "^1.1.0",
     "vue3-observe-visibility": "^1.0.3"
   },
   "devDependencies": {
