--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.4",
     "css-loader": "^7.1.2",
     "echarts": "^5.6.0",
+    "konva": "^9.3.20",
     "less": "^4.3.0",
     "less-loader": "^12.2.0",
     "material-design-icons": "^3.0.1",
@@ -24,6 +25,7 @@
     "uikit": "^3.23.6",
     "vue": "^3.5.13",
     "vue-friendly-iframe": "^0.20.0",
+    "vue-konva": "^3.2.1",
     "vue-router": "^4.5.0",
     "vue-template-compiler": "^2.7.16",
     "vue3-echarts": "^1.1.0",
