--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^13.1.0",
     "axios": "^1.8.4",
     "css-loader": "^7.1.2",
     "echarts": "^5.6.0",
